--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -23,3 +23,10 @@ jobs:
         distribution: 'temurin'
     - name: Build with Ant
       run: ant -noinput -buildfile build.xml
+    - name: Download a Build Artifact
+        uses: actions/download-artifact@v3.0.0
+        with:
+          # Artifact name
+          name: # optional
+          # Destination path
+          path: # optional
